--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ tensorboard
 # verified versions
 # pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
 pycocotools>=2.0.2
-onnx==1.8.1
+
 onnxruntime==1.8.0
-onnx-simplifier==0.3.5
+# remove some ONNX for Jetson (not available)
+# onnx==1.8.1
+# onnx-simplifier==0.3.5
